--- a/css/electric.css
+++ b/css/electric.css
@@ -105,7 +105,7 @@
     position: fixed;
     top: 88.600vh;
     left: 834px;
-    padding: 5px;
+    padding: 3px 5px !important;
     background: white;
     border-bottom: 2px solid #2b13bb;
   }
@@ -215,7 +215,7 @@
     top: 83vh !important;
     white-space: nowrap;
   }
-  @media (min-width: 1440px) and (max-width: 1600px) {
+  @media (min-width: 1200px) and (max-width: 1600px) {
     #traceToolButton {
       width: auto;
       padding: 1px 2px;
@@ -261,7 +261,7 @@
     }
     .leaflet-draw-draw-polyline {
       top: 61vh;
-  
+      padding: 5px;
       left: 663px !important;
       border: 2px solid #2b13bb !important;
       border-bottom: 2px solid darkblue;
@@ -276,15 +276,15 @@
       background-color: white;
       color: black;
       padding: 7px;
-      display: none;
+      /* display: none; */
       position: absolute;
       border: 2px solid #2b13bb;
       border-top: 2px solid #2b13bb;
       border-bottom: 2px solid #2b13bb;
-      top: 76.4vh !important;
+      top: 76.300vh !important;
       height: 37px;
       width: 37px;
-      left: 500px;
+      left: 503px;
       font-size: 15px;
       border-bottom: 2px solid #2b13bb;
     }
@@ -297,9 +297,9 @@
       background-color: white;
       color: black;
       cursor: pointer;
-      left: 532px;
+      left: 461px;
       position: absolute;
-      top: 69vh;
+      top: 68.900vh;
       height: 37px;
       width: 37px;
       display: none;
@@ -313,11 +313,11 @@
       position: absolute !important;
       height: 37px !important;
       width: 37px !important;
-      top: 71vh !important;
+      top: 70.800vh !important;
       border: 2px solid #2b13bb;
       border-radius: 5px 5px 5px 5px !important;
       display: none;
-      left: 573px !important;
+      left: 541px !important;
       border-bottom: 2px solid #2b13bb !important;
     }
     .leaflet-draw-actions {
@@ -326,7 +326,7 @@
       margin: 0;
       padding: 0;
       position: fixed !important;
-      left: 500px !important;
+      left: 590px !important;
       top: 86vh !important;
       white-space: nowrap;
     }
@@ -336,11 +336,11 @@
       border-radius: 5px 5px 5px 5px;
       height: 37px !important;
       width: 37px !important;
-      display: none;
+      /* display: none; */
       position: fixed;
-      top: 91vh;
-      left: 838px;
-      padding: 5px;
+      top: 90.790vh;
+      left: 54.410%;
+      padding: 3px 5px !important;
       background: white;
       border-bottom: 2px solid #2b13bb;
     }
@@ -353,12 +353,12 @@
       position: fixed;
       color: black;
       padding: 5px 5px;
-      display: none !important;
-      top: 91vh;
+      /* display: none !important; */
+      top: 90.700vh;
       font-size: 19px;
       height: 37px;
       width: 37px;
-      left: 880px;
+      left: 870px;
     }
     #deleteFeatureButton {
       border: 2px solid #2b13bb;
@@ -367,13 +367,13 @@
       background-color: white;
       color: black;
       padding: 3px 7px;
-      display: none;
+      /* display: none; */
       position: fixed;
-      top: 91vh;
+      top: 90.790vh;
       font-size: 15px;
       height: 37px;
       width: 37px;
-      left: 920px;
+      left: 910px;
     }
     .leaflet-draw-draw-polygon{
       left: 620px !important;
@@ -389,14 +389,15 @@
     }
     .leaflet-draw-draw-circle {
       position: absolute;
-      top: 454px;
+      top: 453px;
       left: 582px;
       border-bottom: 2px solid #2b13bb !important;
       border-top: 2px solid #2b13bb !important;
       border-left: 2px solid #2b13bb !important;
       border-right: 2px solid #2b13bb !important;
       border-top: none;
-      width: 37px !important;
+      padding: 5px !important;
+        width: 37px !important;
       height: 37px !important;
       border-radius: 5px 5px 5px 5px !important;
     }
