--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,6 @@
   padding: 0;
   box-sizing: border-box;
 }
-/* body{
-  overflow: hidden;
-} */
 #map {
   top: 0px;
   left: 0px;
@@ -38,7 +35,7 @@ a {
 }
 
 .leaflet-div-icon {
-  margin-left: -10px ;
+  margin-left: -10px;
   margin-top: -10px;
   width: 5px;
   height: 5px;
@@ -70,32 +67,6 @@ a {
   z-index: 9999;
   transition: 0s;
 }
-
-/* 
-.close-button {
-  position: absolute;
-  height: 20px;
-  width: 20px;
-  top: 0px;
-  right: 0px;
-  padding:0 10px 20px 5px;
-  z-index: 999;
-  cursor: pointer;
-  background-color: transparent;
-  color: red;
-  font-weight: bold;
-  border: none;
-
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-  z-index: 999999;
-}
-
-.close-button:hover{
-
-
-  background-color: transparent;
-  border-radius: 5px;
-} */
 
 .ui-autocomplete {
   max-height: 200px;
@@ -155,7 +126,7 @@ a {
   animation: swal2-show 0.3s ease; /* Set the transition with ease */
 }
 
-.swal2-show{
+.swal2-show {
   animation: swal2-hide 0.3s ease; /* Set the transition with ease */
 }
 
@@ -179,7 +150,7 @@ a {
     opacity: 0;
     transform: scale(0.8);
   }
-} 
+}
 
 .leaflet-touch .leaflet-control-layers-toggle {
   width: 44px;
@@ -322,14 +293,6 @@ border: 2px solid darkblue;
   font-size: 10px;
 }
 
-/* popup */
-
-/* .popup-table td {
-    border-right: 1px solid; 
-    padding: 7px;
-    vertical-align: middle;
-  } */
-
 .leaflet-popup-content {
   margin: 13px 24px 13px 20px;
   line-height: 1.3;
@@ -394,67 +357,14 @@ td {
   border: none;
   border-radius: 5px;
   background: #fff;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
-  font-size: 14px  !important;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif !important;
+  font-size: 14px !important;
 }
-
 
 .custom-button:hover {
   background-color: #bbb;
 }
-
-
-
-
-/* circle */
-
-/* circle */
-
-/* .leaflet-draw-draw-polyline {
-  top: 500px;
-  left: 500px;
-  position: absolute;
-  border-radius: 5px 5px 5px 5px;
-  border: 2px solid #2b13bb;
-  border-bottom: 2px solid #2b13bb;
-}  */
-
-/* style="border:2px solid #bbb;  border-radius:5px; background-color:green; color:white; padding: 5px ; display:none" */
-
-/* trace */
-/* .leaflet-control .leaflet-bar{
-padding: 4px 0px 4px 4px;
-background-color: white;
-border: 2px solid darkblue;
-top: 0px;
-} */
-
-
-/* polygon leaflet css */
-
-/* .leaflet-draw-draw-polygon{
-  
-    position: absolute;
-     top: -217px; 
-
-}*/
-/* .leaflet-draw-draw-polygon {
-  position: fixed !important;
-
-  top: 684px !important;
-
-  left: 550px !important;
-  border: 2px solid darkblue;
-} */
-
-/* .leaflet-draw-draw-circlemarker{
-  
-  position: absolute;
-    top: -140px;
-    left: 53px;
-    border:2px solid darkblue;
-
-} */
 
 .leaflet-touch .geocoder-control-input {
   height: 30px;
@@ -467,4 +377,3 @@ top: 0px;
 .leaflet-touch .geocoder-control-input:focus {
   width: 300px;
 }
-
