--- a/css/tool.css
+++ b/css/tool.css
@@ -1,382 +1,114 @@
-@media only screen and (min-width:992px) and (max-width:1400px){
-  .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polyline {
-    background-position: 2px 2px !important;
-}
-  .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polygon {
-    background-position: -28px 1px !important;
-  }
-  .draw_feature { 
-    top: 81vh;
-    left: 699px;
-    position: absolute;
-    height: 37px;
-    width: 37px;
-    /* padding: 8px 7px !important; */
-    border: 2px solid #2b13bb;
-    border-radius: 5px 5px 5px 5px;
-  }
-  #saveDataButton {
-    border: 2px solid #2b13bb;
-    border-bottom: 2px solid #2b13bb;
-    border-top: 2px solid #2b13bb;
-    border-radius: 5px 5px 5px 5px;
-    background-color: white;
-    position: fixed;
-    color: black;
-    padding: 5px 5px;
-    display: none;
-    /* top: 94vh; */
-    bottom: 20vh;
-    font-size: 19px;
-    height: 37px;
-    width: 37px;
-    left: 880px;
-  }
-  #deleteFeatureButton {
-    border: 2px solid #2b13bb;
-    border-top: 2px solid #2b13bb;
-    border-radius: 5px 5px 5px 5px;
-    background-color: white;
-    color: black;
-    padding: 3px 7px;
-    display: none;
-    position: fixed;
-    top: 94vh;
-    font-size: 15px;
-    height: 37px;
-    width: 37px;
-    left: 920px;
-  }
-  .leaflet-draw-draw-polygon {
-    left: 617px !important;
-    position: relative !important;
-    top: 40vh !important;
-    height: 37px !important;
-    width: 37px !important;
-    border-bottom: 2px solid #2b13bb !important;
-    border-top: 2px solid #2b13bb !important;
-    border-left: 2px solid #2b13bb !important;
-    border-right: 2px solid #2b13bb !important;
-    border-radius: 5px 5px 5px 5px !important;
-  }
-  .leaflet-draw-draw-polyline {
-    top: 60vh;
-    position: absolute !important;
-    left: 658px !important;
-    border: 2px solid #2b13bb !important;
-    border-bottom: 2px solid darkblue;
-    height: 37px !important;
-    width: 37px !important;
-    /* display: none !important; */
-    border-radius: 5px 5px 5px 5px !important;
-  }
+@media only screen and (min-width:992px){
+#traceToolButton {
+  background-color: #fff;
+  font-weight: bold;
+  font-size: 10px !important;
+  border: 2px solid #2b13bb;
+  border-radius: 5px !important;
+  cursor: pointer;
+  position:fixed !important;
+  top: 91.970%;
+  left: 58% !important;
+  height: 37px !important;
+  width: 37px !important;
+  transform: translateX(-50%); 
+  border-radius: 5px 5px 5px 5px;
+  z-index: 9999;
   
-  #editFeatureButton {
-    border: 2px solid #2b13bb;
-    border-radius: 5px 5px 5px 5px;
-    height: 37px !important;
-    width: 37px !important;
-    display: none;
-    position: fixed;
-    top: 93.89vh;
-    left: 838px;
-    padding: 5px;
-    background: white;
-    border-bottom: 2px solid #2b13bb;
-  }
-  .custom-button {
-    width: auto;
-    padding: 9px 8px !important;
-    background-color: #fff;
-    /* color: darkblue; */
-    font-weight: bold;
-    font-size: 9px !important;
-    border: 2px solid #2b13bb;
-    border-radius: 5px !important;
-    cursor: pointer;
-    /* position: absolute; */
-    top: 67.300vh;
-    left: 784px !important;
-    height: 37px !important;
-    width: 37px !important;
-    transition: background-color 0.1s;
-  }
-  #save-button {
-    /* border: 2px solid rgb(187, 187, 187); */
-    border-radius: 5px 5px 5px 5px;
-    background-color: white;
-    color: black;
-    padding: 7px;
-    display: none;
-    position: absolute;
-    border: 2px solid #2b13bb;
-    border-top: 2px solid #2b13bb;
-    border-bottom: 2px solid #2b13bb;
-    top: 77.4vh;
-    height: 37px;
-    width: 37px;
-    left: 615px;
-    font-size: 15px;
-    border-bottom: 2px solid #2b13bb;
-  }
-  .delete-button {
-    border: 2px solid #2b13bb;
-    padding: 6px 7.3px;
-    font-size: 14px;
-    border-radius: 5px 5px 5px 5px;
-    display: block;
-    background-color: white;
-    color: black;
-    cursor: pointer;
-    left: 532px;
-    position: absolute;
-    top: 68.84vh;
-    height: 37px;
-    width: 37px;
-    display: none;
-    border-top: 2px solid #2b13bb !important;
-    border-bottom: 2px solid #2b13bb !important;
-    border-left: 2px solid #2b13bb !important;
-    border-right: 2px solid #2b13bb !important;
-  }
-  
-  .leaflet-control-edit-interior {
-    font-size: 15px;
-    position: absolute !important;
-    height: 37px !important;
-    width: 37px !important;
-    top: 71vh !important;
-    border: 2px solid #2b13bb;
-    border-radius: 5px 5px 5px 5px !important;
-    display: none;
-    left: 573px !important;
-    border-bottom: 2px solid #2b13bb !important;
-  }
-  
-  /* circle */
-  .leaflet-draw-draw-circlemarker {
-    position: absolute;
-    top: -260px;
-    left: 56px;
-    border-bottom: 2px solid darkblue;
-    border: 2px solid darkblue;
-    /* border-top: none; */
-    width: 30px;
-  }
-  #traceToolButton {
-    width: auto;
-    padding: 1px 2px;
-    background-color: #fff;
-    color: darkblue;
-    font-weight: bold;
-    font-size: 10px !important;
-    border: 2px solid #2b13bb;
-    border-radius: 5px !important;
-    cursor: pointer;
-    position: absolute !important;
-    top: 79.4vh !important;
-    left: 739px !important;
-    height: 37px !important;
-    width: 37px !important;
-    border-radius: 5px 5px 5px 5px;
-  }
-  .leaflet-draw-actions {
-    display: none;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    position: fixed !important;
-    left: 500px !important;
-    top: 88vh !important;
-    white-space: nowrap;
-  }
-
+}
+.custom-button {
+  padding: 6px 3px !important;
+  background-color: #fff;
+  font-weight: bold;
+  font-size: 9px !important;
+  border: 2px solid #2b13bb;
+  border-radius: 5px !important;
+  cursor: pointer;
+  position: fixed !important;
+  top: 90.700%;
+  transform: translateX(-50%); 
+  left: 60.900% !important;
+  height: 37px !important;
+  width: 37px !important;
+  transition: background-color 0.1s;
+}
+.draw_feature {
+  top: 92%;
+  left: 54%;
+  position:fixed;
+  height: 37px !important;
+  width: 37px !important;
+  border: 2px solid #2b13bb;
+  transform: translateX(-50%); 
+  border-radius: 5px 5px 5px 5px;
+}
+#editFeatureButton {
+  border: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px;
+  height: 37px !important;
+  width: 37px !important;
+  /* display: none !important; */
+  position: fixed !important;
+  top: 92%;
+  left:71.600%;
+  padding: 5px;
+  background: white;
+  border-bottom: 2px solid #0e0d14;
 }
 
-
-
-
-
-
-
-@media (min-width:1440px){
-  #traceToolButton {
-    width: auto;
-    /* padding: 1px 2px; */
-    background-color: #fff;
-    /* color: darkblue; */
-    font-weight: bold;
-    font-size: 10px !important;
-    border: 2px solid #2b13bb;
-    border-radius: 5px !important;
-    cursor: pointer;
-    position: absolute !important;
-    top: 78.400vh;
-    left:778px !important;
-    height: 37px !important;
-    width: 37px !important;
-    border-radius: 5px 5px 5px 5px;
-  }
-  .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polyline {
-    background-position: 2px 2px !important;
-    font-size:  10px !important;
+#saveDataButton {
+  border: 2px solid #2b13bb;
+  border-bottom: 2px solid #2b13bb;
+  border-top: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px;
+  background-color: white;
+  position: fixed!important;
+  color: black;
+  padding: 0px 5px;
+  /* display: none; */
+  top: 92%;
+  font-size: 17px;
+  height: 37px;
+  width: 37px;
+  left: 67.800%;
 }
-  .custom-button {
-    width: auto;
-    padding: 9px 8px !important;
-    background-color: #fff;
-    /* color: darkblue; */
-    font-weight: bold;
-    font-size: 9px !important;
-    border: 2px solid #2b13bb;
-    border-radius: 5px !important;
-    cursor: pointer;
-    position: absolute;
-    top: 68.700vh;
-  
-    left: 740px !important;
-    height: 37px !important;
-    width: 37px !important;
-    transition: background-color 0.1s;
-  }
-  .leaflet-top .leaflet-control {
-    margin-top: 9px !important;
+#deleteFeatureButton{
+  border: 2px solid #2b13bb;
+  border-top: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px;
+  background-color: white;
+  color: black;
+  padding: 3px 7px;
+  /* display: none; */
+  position: fixed;
+  top: 92% !important;;
+  font-size: 15px !important;
+  height: 37px !important;
+  width: 37px !important;
+  left: 64% !important;
 }
-  .draw_feature {
-    top: 79.64vh;
-    left: 699px;
-    position: absolute;
-    height: 37px !important;
-    width: 37px !important;
-    border: 2px solid #2b13bb;
-    border-radius: 5px 5px 5px 5px;
-  }
-  .leaflet-draw-draw-polyline {
-    top: 61.2vh;
-    
-    left: 658px !important;
-    border: 2px solid #2b13bb !important;
-    border-bottom: 2px solid darkblue;
-    height: 37px !important;
-    width: 37px !important;
-    /* display: none !important; */
-    border-radius: 5px 5px 5px 5px !important;
-  }
-  #save-button {
-    /* border: 2px solid rgb(187, 187, 187); */
-    border-radius: 5px 5px 5px 5px;
-    background-color: white;
-    color: black;
-    padding: 7px;
-    display: none;
-    position: absolute;
-    border: 2px solid #2b13bb;
-    border-top: 2px solid #2b13bb;
-    border-bottom: 2px solid #2b13bb;
-    top: 76.800vh !important;
-    height: 37px;
-    width: 37px;
-    left: 618px;
-    font-size: 15px;
-    border-bottom: 2px solid #2b13bb;
-  }
-  .delete-button {
-    border: 2px solid #2b13bb;
-    padding: 7px ;
-    font-size: 14px;
-    border-radius: 5px 5px 5px 5px;
-    display: block;
-    background-color: white;
-    color: black;
-    cursor: pointer;
-    left: 536px;
-    position: absolute;
-    top: 70vh;
-    height: 37px;
-    width: 37px;
-    display: none;
-    border-top: 2px solid #2b13bb !important;
-    border-bottom: 2px solid #2b13bb !important;
-    border-left: 2px solid #2b13bb !important;
-    border-right: 2px solid #2b13bb !important;
-  }
-  .leaflet-control-edit-interior {
-    font-size: 15px;
-    position: absolute !important;
-    height: 37px !important;
-    width: 37px !important;
-    top: 71.700vh !important;
-    border: 2px solid #2b13bb;
-    border-radius: 5px 5px 5px 5px !important;
-    display: none;
-    left: 576px !important;
-    border-bottom: 2px solid #2b13bb !important;
-  }
-  .leaflet-draw-actions {
-    display: none;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    position: fixed !important;
-    left: 500px !important;
-    top: 86vh !important;
-    white-space: nowrap;
-  }
+.leaflet-control-edit-interior {
+  font-size: 15px;
+  position: absolute !important;
+  height: 37px !important;
+  width: 37px !important;
+  top: 486px !important;
+  border: 2px solid #2b13bb;
+  border-radius: 5px 5px 5px 5px !important;
+  display: none;
+  left: 570px !important;
+  border-bottom: 2px solid #2b13bb !important;
+}
+.leaflet-draw-draw-polyline {
+  top: 92%;
+  position: fixed !important;
+  left:48.400% !important;
+  border: 2px solid #2b13bb !important;
+  border-bottom: 2px solid darkblue;
+  height: 37px !important;
+  width: 37px !important;
+  /* display: none !important; */
+  border-radius: 5px 5px 5px 5px !important;
+}
 
-  #editFeatureButton {
-    border: 2px solid #2b13bb;
-    border-radius: 5px 5px 5px 5px;
-    height: 37px !important;
-    width: 37px !important;
-    display: none !important;
-    position: fixed;
-    top: 90.750vh;
-    left: 829px;
-    padding: 5px;
-    background: white;
-    border-bottom: 2px solid #0e0d14;
-  }
-  #saveDataButton {
-    border: 2px solid #2b13bb;
-    border-bottom: 2px solid #2b13bb;
-    border-top: 2px solid #2b13bb;
-    border-radius: 5px 5px 5px 5px;
-    background-color: white;
-    position: fixed;
-    color: black;
-    /* padding: 5px 5px; */
-    display: none;
-    top: 90.750vh;
-    font-size: 19px;
-    height: 37px;
-    width: 37px;
-    left: 869px;
-  }
-  #deleteFeatureButton {
-    border: 2px solid #2b13bb;
-    border-top: 2px solid #2b13bb;
-    border-radius: 5px 5px 5px 5px;
-    background-color: white;
-    color: black;
-    padding: 3px 7px;
-    display: none;
-    position: fixed;
-    top: 90.750vh;
-    font-size: 15px;
-    height: 37px;
-    width: 37px;
-    left: 909px;
-  }
-  .leaflet-draw-draw-polyline {
-    top: 62.500vh;
-    position: absolute !important;
-    left: 658px !important;
-    border: 2px solid #2b13bb !important;
-    border-bottom: 2px solid darkblue;
-    height: 37px !important;
-    width: 37px !important;
-    font-size: 15px !important;
-    /* display: none !important; */
-    border-radius: 5px 5px 5px 5px !important;
-  }
-}
+}  
