--- a/css/road.css
+++ b/css/road.css
@@ -1,175 +1,227 @@
-.leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polyline {
-    background-position: 2px 2px !important;
-  }
-  leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polyline {
-    background-position: 2px 2px !important;
-  }
+@media only screen and (min-width: 992px){
   .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polygon {
-    background-position: -28px 1px !important;
+      background-position: -27px 2px !important;
   }
+  .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-circlemarker {
+      background-position: -269px 2px !important;
+  }
+  .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polyline {
+    background-position: 3px 2px !important;
+}
   .draw_feature {
-    top: 575px !important;
-    left: 699px;
-    position: relative;
-    height: 37px;
-    width: 37px;
-    border: 2px solid #2b13bb !important;
-  }
-  #saveDataButton {
-    border: 2px solid #2b13bb;
-    border-bottom: 2px solid #2b13bb;
-    border-top: 2px solid #2b13bb;
-    border-radius: 5px 5px 5px 5px;
-    background-color: white;
-    position: fixed;
-    color: black;
-    padding: 0px 5px;
-    display: none;
-    top: 690px;
-    font-size: 19px;
-    height: 37px;
-    width: 37px;
-    left: 880px;
-  }
-  #deleteFeatureButton {
-    border: 2px solid #2b13bb;
-    border-top: 2px solid #2b13bb;
-    border-radius: 5px 5px 5px 5px;
-    background-color: white;
-    color: black;
-    padding: 3px 7px;
-    display: none;
-    position: fixed;
-    top: 690px;
-    font-size: 15px;
-    height: 37px;
-    width: 37px;
-    left: 925px;
-  }
-  .leaflet-draw-draw-polygon {
-    left: 617px !important;
-    position: absolute !important;
-    top: 414px !important;
-    height: 37px !important;
-    width: 37px !important;
-    border-bottom: 2px solid #2b13bb !important;
-    border-top: 2px solid #2b13bb !important;
-    border-left: 2px solid #2b13bb !important;
-    border-right: 2px solid #2b13bb !important;
-    border-radius: 5px 5px 5px 5px !important;
-  }
-  .leaflet-draw-draw-polyline {
-    top: 414px !important;
-    position: absolute !important;
-    left: 659px !important;
-    border: 2px solid #2b13bb !important;
-    border-bottom: 2px solid darkblue;
-    height: 37px !important;
-    width: 37px !important;
-    border-radius: 5px 5px 5px 5px !important;
-  }
-  .leaflet-control-edit-interior {
-    font-size: 15px;
-    position: absolute !important;
-    height: 37px !important;
-    width: 37px !important;
-    top: 486px !important;
-    border: 2px solid #2b13bb;
-    border-radius: 5px 5px 5px 5px !important;
-    display: none;
-    left: 570px !important;
-    border-bottom: 2px solid #2b13bb !important;
+      top: 91%;
+      left: 54%;
+      position:fixed;
+      height: 37px;
+      width: 37px;
+      border: 2px solid #2b13bb;
+      border-radius: 5px 5px 5px 5px;
+    }
+    .leaflet-draw-draw-polyline {
+      top: 91%;
+      position: fixed !important;
+      left:50.10% !important;
+      border: 2px solid #2b13bb !important;
+      border-bottom: 2px solid darkblue;
+      height: 37px !important;
+      width: 37px !important;
+      /* display: none !important; */
+      border-radius: 5px 5px 5px 5px !important;
+    }
+    #traceToolButton {
+      background-color: #fff;
+      font-weight: bold;
+      font-size: 10px !important;
+      border: 2px solid #2b13bb;
+      border-radius: 5px !important;
+      cursor: pointer;
+      position:fixed !important;
+      top: 91%;
+      left: 59.50% !important;
+      height: 37px !important;
+      width: 37px !important;
+      transform: translateX(-50%); 
+      border-radius: 5px 5px 5px 5px;
+      z-index: 9999;
+      
+    }
+    .custom-button {
+      padding: 6px 3px !important;
+      background-color: #fff;
+      font-weight: bold;
+      font-size: 9px !important;
+      border: 2px solid #2b13bb;
+      border-radius: 5px !important;
+      cursor: pointer;
+      position: fixed !important;
+      top: 89.600%;
+      transform: translateX(-50%); 
+      left: 62.30% !important;
+      height: 37px !important;
+      width: 37px !important;
+      transition: background-color 0.1s;
+    }
+    
+    .leaflet-draw-draw-polygon {
+      left: 61.500% !important;
+      position: fixed !important;
+      top: 91% !important;
+      height: 37px !important;
+      width: 37px !important;
+      border-bottom: 2px solid #2b13bb !important;
+      border: 2px solid #2b13bb;
+      border-radius: 5px 5px 5px 5px !important;
+       }
+    .leaflet-draw-draw-circlemarker {
+      top: 91%;
+      left: 50.20%;
+      position: fixed !important;
+      border-bottom: 2px solid #2b13bb;
+      border: 2px solid #2b13bb;
+      border-bottom: 2px solid #2b13bb !important;
+      /* border-top: none; */
+      width: 37px !important;
+      height: 37px !important;
+      border-radius: 5px 5px 5px 5px !important;
+    }
+    #saveDataButton {
+      border: 2px solid #2b13bb;
+      border-bottom: 2px solid #2b13bb;
+      border-top: 2px solid #2b13bb;
+      border-radius: 5px 5px 5px 5px;
+      background-color: white;
+      position: fixed;
+      color: black;
+      padding: 5px 5px;
+      /* display: none; */
+      top: 91%;
+      font-size: 17px;
+      height: 37px;
+      width: 37px;
+      left: 69.10%;
+    }
+    #editFeatureButton {
+      border: 2px solid #2b13bb;
+      border-radius: 5px 5px 5px 5px;
+      height: 37px !important;
+      width: 37px !important;
+      /* display: none; */
+      position: fixed;
+      top: 91%;
+      left:65.30%;
+      padding: 3px 5px !important;
+      background: white;
+      border-bottom: 2px solid #2b13bb;
+    }
+    #deleteFeatureButton {
+      border: 2px solid #2b13bb;
+      border-top: 2px solid #2b13bb;
+      border-radius: 5px 5px 5px 5px;
+      background-color: white;
+      color: black;
+      padding: 3px 7px;
+      /* display: none; */
+      position: fixed;
+      top: 91%;
+      font-size: 15px;
+      height: 37px;
+      width: 37px;
+      left: 72.90%;
+    }
+    #save-button {
+      /* border: 2px solid rgb(187, 187, 187); */
+      border-radius: 5px 5px 5px 5px;
+      background-color: white;
+      color: black;
+      padding: 7px;
+      display: none;
+      position: fixed;
+      border: 2px solid #2b13bb;
+      border-top: 2px solid #2b13bb;
+      border-bottom: 2px solid #2b13bb;
+      top: 91%;
+      height: 37px;
+      width: 37px;
+      left:42.8%;
+      font-size: 15px;
+      border-bottom: 2px solid #2b13bb;
+    }
+    .delete-button {
+      border: 2px solid #2b13bb;
+      padding: 6px 7.3px;
+      font-size: 14px;
+      border-radius: 5px 5px 5px 5px;
+      display: block;
+      background-color: white;
+      color: black;
+      cursor: pointer;
+      left: 38.800%;
+      position:fixed;
+      top: 91%;
+      height: 37px;
+      width: 37px;
+      /* display: none; */
+      border-top: 2px solid #2b13bb !important;
+      border-bottom: 2px solid #2b13bb !important;
+      border-left: 2px solid #2b13bb !important;
+      border-right: 2px solid #2b13bb !important;
+    }
+    .leaflet-control-edit-interior {
+      font-size: 15px;
+      position:fixed !important;
+      height: 37px !important;
+      width: 37px !important;
+      top:91%!important;
+      border: 2px solid #2b13bb;
+      border-radius: 5px 5px 5px 5px !important;
+      display: none;
+      left:46.50%!important;
+      border-bottom: 2px solid #2b13bb !important;
+    }
+    #save-button {
+      /* border: 2px solid rgb(187, 187, 187); */
+      border-radius: 5px 5px 5px 5px;
+      background-color: white;
+      color: black;
+      padding: 7px;
+      display: none;
+      position: fixed;
+      border: 2px solid #2b13bb;
+      border-top: 2px solid #2b13bb;
+      border-bottom: 2px solid #2b13bb;
+      top: 91%;
+      height: 37px;
+      width: 37px;
+      left: 42.60%;
+      font-size: 15px;
+      border-bottom: 2px solid #2b13bb;
   }
 
-  #editFeatureButton {
-    border: 2px solid #2b13bb;
-    border-radius: 5px 5px 5px 5px;
-    height: 37px !important;
-    width: 37px !important;
-    display: none;
-    position: fixed;
-    top: 690px;
-    left: 838px;
-    padding: 5px;
-    background: white;
-    border-bottom: 2px solid #2b13bb;
-  }
-  .custom-button {
-    width: auto;
-    padding: px 5px;
-    background-color: #fff;
-    /* color: darkblue; */
-    font-weight: bold;
-    font-size: 10px !important;
-    border: 2px solid #2b13bb;
-    border-radius: 5px !important;
-    cursor: pointer;
-    /* position: absolute; */
-    top: 680px !important;
-    left: 741px !important;
-    height: 37px !important;
-    width: 37px !important;
-    transition: background-color 0.1s;
-  }
-  #save-button {
-    /* border: 2px solid rgb(187, 187, 187); */
-    border-radius: 5px 5px 5px 5px;
-    background-color: white;
-    color: black;
-    padding: 7px;
-    display: none;
-    position: absolute;
-    border: 2px solid #2b13bb;
-    border-top: 2px solid #2b13bb;
-    border-bottom: 2px solid #2b13bb;
-    top: 480px;
-    height: 37px;
-    width: 37px;
-    left: 574px;
-    font-size: 15px;
-    border-bottom: 2px solid #2b13bb;
-  }
-  .delete-button {
-    border: 2px solid #2b13bb;
-    padding: 6px 7.3px;
-    font-size: 14px;
-    border-radius: 5px 5px 5px 5px;
-    display: block;
-    background-color: white;
-    color: black;
-    cursor: pointer;
-    left: 488px;
-    position: absolute;
-    top: 425px !important;
-    height: 37px;
-    width: 37px;
-    display: none;
-    border-top: 2px solid #2b13bb !important;
-    border-bottom: 2px solid #2b13bb !important;
-    border-left: 2px solid #2b13bb !important;
-    border-right: 2px solid #2b13bb !important;
-  }
+    .leaflet-control-edit-interior {
+      font-size: 15px;
+      position: fixed!important;
+      height: 37px !important;
+      width: 37px !important;
+      top: 91% !important;
+      border: 2px solid #2b13bb;
+      border-radius: 5px 5px 5px 5px !important;
+      display: none;
+      left: 46.30%!important;
+      border-bottom: 2px solid #2b13bb !important;
+    }
+    .leaflet-draw-actions {
+      display: none;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      position: fixed !important;
+      left: 45%!important;
+      top: 86% !important;
+      white-space: nowrap;
+    }
+    
+}
+@media only screen and (min-width: 1400px){
+  
 
-  .leaflet-control-edit-interior {
-    font-size: 15px;
-    position: absolute !important;
-    height: 37px !important;
-    width: 37px !important;
-    top: 438px !important;
-    border: 2px solid #2b13bb;
-    border-radius: 5px 5px 5px 5px !important;
-    display: none;
-    left: 530px !important;
-    border-bottom: 2px solid #2b13bb !important;
-  }
-
-  /* circle */
-  .leaflet-draw-draw-circlemarker {
-    position: absolute;
-    top: -260px;
-    left: 56px;
-    border-bottom: 2px solid darkblue;
-    border: 2px solid darkblue;
-    border-top: none;
-    width: 30px;
-  }
+}
