code update dashboard and geometry page

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,167 +1,376 @@
+.leaflet-control-zoom {
+    position: absolute;
+    left: 96vw;
+    top: 85vh;
+    border: 2px solid darkblue;
+  }
+  
+
+  .leaflet-container .leaflet-control-attribution {
+    display: none;
+  }
+  
+  .leaflet-control-layers-toggle {
+    top: 0;
+  }
+  
+  .leaflet-control-layers-list {
+    width: 150px;
+    height: 200px;
+    overflow-y: scroll;
+    scrollbar-width: thin;
+    font-size: 9px;
+    padding: 0px;
+    /* color: darkblue; */
+  }
+
+  .leaflet-control-layers-overlays {
+    width: 100%;
+  }
 
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    overflow-x: hidden;
-    /* padding: 10px; */
-    background-color: #e8f5e9;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  height: 100vh !important;
+  overflow: hidden;
+  /* padding: 10px; */
+  background-color: #e8f5e9;
 }
 
-
-/* .container {  
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-} */
 
 .search-bar {
-    display: flex;
-    gap: 10px;
-    margin-bottom: 20px;
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
 }
 
-.search-bar select, .search-bar button {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+.search-bar select,
+.search-bar button {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
 
 .search-bar button {
-    background-color: #4caf50;
-    color: white;
-    cursor: pointer;
+  background-color: #4caf50;
+  color: white;
+  cursor: pointer;
 }
 
 .main-content {
-    display: flex;
-    width: 100vw;
-    max-width: 98vw;
-    transition: all 0.3s ease;
+  display: flex;
+  width: 100vw;
+  max-width: 98vw;
+  transition: all 0.3s ease;
 }
 
 .map-container {
-    width: 100vw;
-    position: relative;
+  width: 100vw;
+  position: relative;
 }
 
 #map {
-    position: relative;
-    width: 98vw;
-    height: 100vh;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    transition: width 0.3s ease;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  transition: width 0.3s ease;
 }
 
-
 .tablestats {
- 
-    color: #04c;
-    font-size: 53%;
-    font-weight: bold;
-    padding: 3px;
-    text-shadow: black;
-    text-transform: uppercase;
-  }
+  color: #04c;
+  font-size: 53%;
+  font-weight: bold;
+  padding: 3px;
+  text-shadow: black;
+  text-transform: uppercase;
+
+  /* position: fixed; color: darkblue; font-size: 12px;font-weight: bold;  z-index: 9999; margin-top: 45px; margin-left:0px; */
+}
 .filters {
-    width: 20vw;
-    margin-left: -5vw;
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    opacity: 0;
-    transition: margin-left 0.3s ease, opacity 0.3s ease;
+  width: 20vw;
+  margin-left: -5vw;
+  background-color: white;
+  /* padding: 20px; */
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  transition: margin-left 0.3s ease, opacity 0.3s ease;
 }
 
 .filters h3 {
-    margin-top: 15px;
+  margin-top: 15px;
 }
 
-.showCount{
-    background-color: #9393d633;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+.showCount {
+  background-color: #9393d633;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .accordion {
-    width: 100%;
+  width: 100%;
 }
 
 .accordion-item {
-    border-top: 1px solid #ccc;
+  border-top: 1px solid #ccc;
 }
 
 .accordion-item:first-child {
-    border-top: none;
+  border-top: none;
 }
 
 .accordion-header {
-    width: 100%;
-    text-align: left;
-    padding: 10px;
-    background-color: #f1f1f1;
-    border: none;
-    outline: none;
-    cursor: pointer;
+  width: 100%;
+  text-align: left;
+  padding: 10px;
+  background-color: #f1f1f1;
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
 
 .accordion-content {
-    display: none;
-    padding: 10px;
-    background-color: white;
-    border-top: 1px solid #ccc;
+  display: none;
+  padding: 10px;
+  background-color: white;
+  border-top: 1px solid #ccc;
 }
 
 .toggle-button {
-    position: absolute;
-    top: 20vh;
-    right: 10px;
-    z-index: 1000;
-    background-color: white;
-    color: darkblue;
-    border: 2px solid darkblue;
-    padding: 8px;
-    border-radius: 5px;
-    cursor: pointer;
+  position: absolute;
+  top: 15vh;
+  right: 10px;
+  z-index: 1000;
+  background-color: white;
+  color: darkblue;
+  border: 2px solid darkblue;
+  padding: 8px;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 /* leaflet zoom */
 
 .leaflet-control-zoom {
-    position: absolute;
-    /* left: 95vw;
+  position: absolute;
+  /* left: 95vw;
     top: 80vh; */
-    border: 2px solid darkblue;
-    color: darkblue;
+  border: 2px solid darkblue;
+  color: darkblue;
+}
+
+/* table */
+
+#openTableBtn {
+  position: absolute;
+  z-index: 9999;
+  top: 22vh;
+  width: auto;
+  padding: 6px;
+  /* height: 5.5%; */
+  right: 10px;
+  background-color: white;
+  border-radius: 5px;
+  border: 2px solid #383899;
+}
+
+.tablebtn {
+  /* padding: 5px; */
+  width: 20px;
+  height: 20px;
+}
+
+#table-container-dashboard {
+  position: absolute;
+  transition: 0s;
+  top: 60%;
+  right: 3%;
+  font-size: 10px;
+  z-index: 9999;
+  width: 500px;
+}
+
+#closeTableBtnDashboard {
+  color: white;
+  font: 14px bold;
+  border: 2px solid red;
+  padding: 8px;
+  background: red;
+  border-radius: 50%;
+  top: 21px;
+  position: absolute;
+  right: 1px;
+  z-index: 1;
+}
+#closeTableBtnDashboard i {
+  position: absolute;
+  top: 2px;
+  right: 2px;
+}
+
+#workTableDashboard {
+  left: 0px;
+  font-size: 8px;
+  height: 100px;
+  width: 100px;
+  overflow: scroll;
+}
+
+/* #printButton{
+    position: absolute;
+     top: 0%; 
+      right: 7%;
+       z-index: 999;
+        color: green; 
+        font-size: 12px;
+        border: none;
+         background-color: transparent;
+          height: 29px;
+     width: 35px;
+} */
+
+/*search bar  */
+
+.SearchBar {
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.SearchBar .form-select,
+.SearchBar .form-control,
+.SearchBar .btn {
+  margin-right: 5px;
+  font-size: 12px;
+  font-weight: bold;
+  width: 8%;
+  height: 4.5%;
+  position: absolute;
+  top: 2%;
+  left: 10%;
+  z-index: 9999999;
+}
+.SearchBar #searchInputDashboard {
+  margin-left: 5px;
+  height: 4.5%;
+  border-radius: 10px;
+  width: 15%;
+  position: absolute;
+  z-index: 9999;
+  top: 2%;
+  left: 18%;
+}
+/* html */
+
+.filters {
+    margin-bottom: 20px;
+  
+}
+.filter-group {
+    /* margin-bottom: 20px; */
+    padding: 10px;
+    border: 1px solid gray;
+    font-size: 10px;
+}
+.filter-group label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+    font-size: 12px;
+    cursor: pointer;
+    position: relative;
+}
+.filter-group input[type="text"] {
+    width: 80%;
+    padding: 5px;
+    margin-bottom: 10px;
+    font-size: 12px;
+    font-weight: bold;
+    display: none;
+}
+.filter-group ul {
+    list-style-type: none;
+    padding: 0;
+    display: none;
+}
+.filter-group ul.active,
+.filter-group input[type="text"].active {
+    display: block;
+    forced-color-adjust: blue;
+}
+.filter-group li {
+    margin-bottom: 5px;
+}
+
+.icon-container {
+position:absolute;
+right:1%; 
+top:0%;
+font-size: 15px;
+}
+
+/* Style the icon */
+.icon-container i {
+color: black; /* Default color */
+}
+
+.abcscroll {
+    height: auto;
+    max-height: 200px;
+    overflow-x: scroll;
+    scrollbar-width: thin; /* For Firefox */
+    scrollbar-color: #888 #f1f1f1; /* For Firefox */
+}
+
+/* WebKit (Safari, older Chrome) */
+.abcscroll::-webkit-scrollbar {
+    width: 10px; /* Makes scrollbars thinner */
+}
+
+.abcscroll::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Color of scrollbar track */
+    border-radius: 10px; /* Rounded corners for scrollbar track */
+}
+
+.abcscroll::-webkit-scrollbar-thumb {
+    background: #888; /* Color of scrollbar handle */
+    border-radius: 10px; /* Rounded corners for scrollbar handle */
+}
+
+.abcscroll::-webkit-scrollbar-thumb:hover {
+    background: #555; /* Darker color on hover state for visibility */
+}
+#daterange {
+    z-index: 9999;
+    position: absolute;
+    padding: 10px;
+    font-size: 1em;
+    left: 50%;
+    top: 3%;
+}
+
+.popup-container {
+    max-height: 200px; /* Set maximum height */
+    overflow-y: scroll; /* Add vertical scroll bar */
+    padding: 10px;
+    background-color: white;
+    border: 1px solid #ccc;
+    /* border-radius: px; */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  .popup-table-container {
+    max-width: 300px;
+    max-height: 300px; /* Set maximum height */
+    overflow-y: scroll;
   }
   
-  /* table */
-
-  #openTableBtn {
-    position: absolute;
-    z-index: 9999;
-    top: 24%;
-    width: auto;
-    padding: 6px;
-    /* height: 5.5%; */
-    right: 10px;
-    background-color: white;
-    border-radius: 5px;
-    border: 2px solid #383899;
+  .popup-table-container td {
+    justify-content: space-evenly;
   }
 
-  .tablebtn {
-    /* padding: 5px; */
-    width: 20px;
-    height: 20px;
-  }
-
-
-  #table-container-dashboard{
-    position: absolute;
-    transition: 0s;
-    top: 50;
-    z-index: 999;
-    width: 500px;
+  .ui-autocomplete {
+    z-index: 1050; /* Ensure it's above other elements */
   }
