--- a/css/style.css
+++ b/css/style.css
@@ -319,14 +319,6 @@ border: 2px solid darkblue;
   font-size: 10px;
 }
 
-/* popup */
-
-/* .popup-table td {
-    border-right: 1px solid; 
-    padding: 7px;
-    vertical-align: middle;
-  } */
-
 .leaflet-popup-content {
   margin: 13px 24px 13px 20px;
   line-height: 1.3;
@@ -334,7 +326,8 @@ border: 2px solid darkblue;
   font-size: 1.08333em;
   min-height: 1px;
   width: 240px;
-  height: 200px;
+  height: auto;
+  max-height: 200px;
   overflow: scroll;
   scrollbar-width: thin;
 }
@@ -457,24 +450,7 @@ td {
   border-top: none;
   width: 30px;
 }
-/* .leaflet-draw-draw-polyline {
-  top: 500px;
-  left: 500px;
-  position: absolute;
-  border-radius: 5px 5px 5px 5px;
-  border: 2px solid #2b13bb;
-  border-bottom: 2px solid #2b13bb;
-}  */
 
-/* style="border:2px solid #bbb;  border-radius:5px; background-color:green; color:white; padding: 5px ; display:none" */
-
-/* trace */
-/* .leaflet-control .leaflet-bar{
-padding: 4px 0px 4px 4px;
-background-color: white;
-border: 2px solid darkblue;
-top: 0px;
-} */
 
 #save-button {
   /* border: 2px solid rgb(187, 187, 187); */
@@ -525,31 +501,12 @@ top: 0px;
   border-bottom: 2px solid #2b13bb !important;
 }
 
-/* polygon leaflet css */
+.leaflet-popup-content-wrapper{
+  height: auto;
+  /* max-height: 200px; */
 
-/* .leaflet-draw-draw-polygon{
-  
-    position: absolute;
-     top: -217px; 
+}
 
-}*/
-/* .leaflet-draw-draw-polygon {
-  position: fixed !important;
-
-  top: 684px !important;
-
-  left: 550px !important;
-  border: 2px solid darkblue;
-} */
-
-/* .leaflet-draw-draw-circlemarker{
-  
-  position: absolute;
-    top: -140px;
-    left: 53px;
-    border:2px solid darkblue;
-
-} */
 
 .leaflet-touch .geocoder-control-input {
   height: 30px;
