--- a/css/electric.css
+++ b/css/electric.css
@@ -1,22 +1,89 @@
-.leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polyline {
-    background-position: 0px 2px !important;
+@media only screen and (min-width: 992px){
+  .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polyline {
+    background-position: 2px 2px !important;
   }
   .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polygon {
-    background-position: -28px 1px !important;
+    background-position: -28px 2px !important;
   }
   .leaflet-draw-toolbar .leaflet-bar .leaflet-draw-toolbar-top {
     display: none !important;
   }
   .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-circle {
-    background-position: -89px 1px !important;
-  }
+    background-position: -89px 2px !important;
+}
   .leaflet-container .leaflet-control-attribution {
     display: none;
   }
+  .draw_feature {
+    top: 92%;
+    left: 57%;
+    position: fixed;
+    height: 37px;
+    width: 37px;
+    border: 2px solid #2b13bb;
+    border-radius: 5px 5px 5px 5px;
+  }
+  .custom-button {
+    width: auto;
+    padding: 7px 7px;
+    background-color: #fff;
+    /* color: darkblue; */
+    font-weight: bold;
+    font-size: 14px !important;
+    border: 2px solid #2b13bb;
+    border-radius: 5px !important;
+    cursor: pointer;
+    position:fixed !important;
+    top: 90.500%;
+    left: 63.80% !important;
+    height: 37px !important;
+    width: 37px !important;
+    transition: background-color 0.1s;
+  }
+  #traceToolButton {
+    width: auto;
+    padding: 1px 2px;
+    background-color: #fff;
+    /* color: darkblue; */
+    font-weight: bold;
+    font-size: 10px !important;
+    border: 2px solid #2b13bb;
+    border-radius: 5px !important;
+    cursor: pointer;
+    position:fixed!important;
+    top: 92%;
+    left: 60.90%;
+    height: 37px !important;
+    width: 37px !important;
+    border-radius: 5px 5px 5px 5px;
+  }
+  .leaflet-draw-draw-polyline {
+    top: 92%;
+    position: fixed!important;
+    left: 53.200% !important;
+    border: 2px solid #2b13bb !important;
+    border-bottom: 2px solid darkblue;
+    height: 37px !important;
+    width: 37px !important;
+    /* display: none !important; */
+    border-radius: 5px 5px 5px 5px !important;
+  }
+  .leaflet-draw-draw-polygon {
+    left: 49.40% !important;
+    position:fixed!important;
+    top: 92%!important;
+    height: 37px !important;
+    width: 37px !important;
+    border-bottom: 2px solid #2b13bb !important;
+    border-top: 2px solid #2b13bb !important;
+    border-left: 2px solid #2b13bb !important;
+    border-right: 2px solid #2b13bb !important;
+    border-radius: 5px 5px 5px 5px !important;
+  }
   .leaflet-draw-draw-circle {
-    position: absolute;
-    top: 356px;
-    left: 582px;
+    position: fixed;
+    top: 92%;
+    left: 45.50%;
     border-bottom: 2px solid #2b13bb !important;
     border-top: 2px solid #2b13bb !important;
     border-left: 2px solid #2b13bb !important;
@@ -26,106 +93,6 @@
     height: 37px !important;
     border-radius: 5px 5px 5px 5px !important;
   }
-  .leaflet-draw-edit-edit {
-    display: none !important;
-  }
-  .leaflet-draw-edit-remove {
-    display: none !important;
-  }
-  .draw_feature {
-    top: 75.700vh;
-    left: 702px;
-    position: absolute;
-    height: 37px;
-    width: 37px;
-    border: 2px solid #2b13bb;
-    border-radius: 5px 5px 5px 5px;
-  }
-  #saveDataButton {
-    border: 2px solid #2b13bb;
-    border-bottom: 2px solid #2b13bb;
-    border-top: 2px solid #2b13bb;
-    border-radius: 5px 5px 5px 5px;
-    background-color: white;
-    position: fixed;
-    color: black;
-    padding: 5px 5px;
-    /* display: none; */
-    top: 88.500vh;
-    font-size: 19px;
-    height: 37px;
-    width: 37px;
-    left: 875px;
-  }
-  #deleteFeatureButton {
-    border: 2px solid #2b13bb;
-    border-top: 2px solid #2b13bb;
-    border-radius: 5px 5px 5px 5px;
-    background-color: white;
-    color: black;
-    padding: 3px 7px;
-    /* display: none; */
-    position: fixed;
-    top: 88.500vh;
-    font-size: 15px;
-    height: 37px;
-    width: 37px;
-    left: 916px;
-  }
-  .leaflet-draw-draw-polygon {
-    left: 620px !important;
-    position: relative !important;
-    top: 54.60vh !important;
-    height: 37px !important;
-    width: 37px !important;
-    border-bottom: 2px solid #2b13bb !important;
-    border-top: 2px solid #2b13bb !important;
-    border-left: 2px solid #2b13bb !important;
-    border-right: 2px solid #2b13bb !important;
-    border-radius: 5px 5px 5px 5px !important;
-  }
-  .leaflet-draw-draw-polyline {
-    top: 54.700vh;
-    position: absolute !important;
-    left: 662px !important;
-    border: 2px solid #2b13bb !important;
-    border-bottom: 2px solid darkblue;
-    height: 37px !important;
-    width: 37px !important;
-    /* display: none !important; */
-    border-radius: 5px 5px 5px 5px !important;
-  }
-  
-  #editFeatureButton {
-    border: 2px solid #2b13bb;
-    border-radius: 5px 5px 5px 5px;
-    height: 37px !important;
-    width: 37px !important;
-    /* display: none; */
-    position: fixed;
-    top: 88.600vh;
-    left: 834px;
-    padding: 3px 5px !important;
-    background: white;
-    border-bottom: 2px solid #2b13bb;
-  }
-  .custom-button {
-    width: auto;
-    padding: 1px 5px;
-    background-color: #fff;
-    /* color: darkblue; */
-    font-weight: bold;
-    font-size: 9px !important;
-    border: 2px solid #2b13bb;
-    border-radius: 5px !important;
-    cursor: pointer;
-    /* position: absolute; */
-    top:62vh;
-    left: 743px !important;
-    height: 37px !important;
-    width: 37px !important;
-    transition: background-color 0.1s;
-  }
   #save-button {
     /* border: 2px solid rgb(187, 187, 187); */
     border-radius: 5px 5px 5px 5px;
@@ -133,14 +100,14 @@
     color: black;
     padding: 7px;
     display: none;
-    position: absolute;
+    position: fixed;
     border: 2px solid #2b13bb;
     border-top: 2px solid #2b13bb;
     border-bottom: 2px solid #2b13bb;
-    top: 72.4vh;
+    top: 92%;
     height: 37px;
     width: 37px;
-    left: 542px;
+    left: 41.66%;
     font-size: 15px;
     border-bottom: 2px solid #2b13bb;
   }
@@ -153,9 +120,9 @@
     background-color: white;
     color: black;
     cursor: pointer;
-    left: 461px;
-    position: absolute;
-    top: 63.84vh;
+    left: 34%;
+    position:fixed;
+    top: 92%;
     height: 37px;
     width: 37px;
     display: none;
@@ -167,43 +134,63 @@
   
   .leaflet-control-edit-interior {
     font-size: 15px;
-    position: absolute !important;
+    position: fixed!important;
     height: 37px !important;
     width: 37px !important;
-    top: 66vh !important;
+    top: 92%!important;
+    padding: 2px !important;
     border: 2px solid #2b13bb;
     border-radius: 5px 5px 5px 5px !important;
-    display: none;
-    left: 501px !important;
+    /* display: none ; */
+    left: 37.70% !important;
     border-bottom: 2px solid #2b13bb !important;
   }
-  
-  /* circle */
-  .leaflet-draw-draw-circlemarker {
-    position: absolute;
-    top: -260px;
-    left: 56px;
-    border-bottom: 2px solid darkblue;
-    border: 2px solid darkblue;
-    /* border-top: none; */
-    width: 30px;
-  }
-  #traceToolButton {
-    width: auto;
-    padding: 1px 2px;
-    background-color: #fff;
-    /* color: darkblue; */
-    font-weight: bold;
-    font-size: 10px !important;
+  #saveDataButton {
     border: 2px solid #2b13bb;
-    border-radius: 5px !important;
-    cursor: pointer;
-    position: absolute !important;
-    top: 74vh;
-    left: 782px !important;
+    border-bottom: 2px solid #2b13bb;
+    border-top: 2px solid #2b13bb;
+    border-radius: 5px 5px 5px 5px;
+    background-color: white;
+    position: fixed;
+    color: black;
+    padding: 5px 5px;
+    padding: 7px !important;
+    display: none;
+    top:92%;
+    font-size: 15px !important;
+    height: 37px;
+    width: 37px;
+    left: 72.350% !important;
+  }
+  #deleteFeatureButton {
+    border: 2px solid #2b13bb;
+    border-top: 2px solid #2b13bb;
+    border-radius: 5px 5px 5px 5px;
+    background-color: white;
+    color: black;
+    padding: 3px 7px;
+    display: none;
+    position: fixed;
+    top:92%;
+    font-size: 14px;
+    height: 37px;
+    width: 37px;
+    left: 76.20%;
+
+  }
+  #editFeatureButton {
+    border: 2px solid #2b13bb;
+    border-radius: 5px 5px 5px 5px;
     height: 37px !important;
     width: 37px !important;
-    border-radius: 5px 5px 5px 5px;
+    display: none;
+    position: fixed !important;
+    top: 92%;
+    left: 68.60%;
+    padding: 3px 5px !important;
+    background: white;
+    font-size: 15px;
+    border-bottom: 2px solid #2b13bb;
   }
   .leaflet-draw-actions {
     display: none;
@@ -211,63 +198,139 @@
     margin: 0;
     padding: 0;
     position: fixed !important;
-    left: 555px !important;
-    top: 83vh !important;
+    left: 40% !important;
+    top: 85%!important;
     white-space: nowrap;
   }
-  @media (min-width: 1200px) and (max-width: 1600px) {
+}
+  @media only screen and (min-width: 1400px){
+    .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polyline {
+      background-position: 2px 2px !important;
+  }
+    .draw_feature {
+      top: 92%;
+      left: 48%;
+      position: fixed;
+      height: 37px !important;
+      width: 37px !important;
+      border: 2px solid #2b13bb;
+      border-radius: 5px 5px 5px 5px;
+    }
     #traceToolButton {
       width: auto;
       padding: 1px 2px;
       background-color: #fff;
-      /* color: darkblue; */
+      color: darkblue;
       font-weight: bold;
       font-size: 10px !important;
       border: 2px solid #2b13bb;
       border-radius: 5px !important;
       cursor: pointer;
-      position: absolute !important;
-      top: 78vh;
-      left: 741px !important;
+      position:fixed!important;
+      top: 92%;
+      left: 50.500%;
       height: 37px !important;
       width: 37px !important;
       border-radius: 5px 5px 5px 5px;
     }
     .custom-button {
       width: auto;
-      padding: 1px 5px;
+      padding: 7px 7px;
       background-color: #fff;
       /* color: darkblue; */
       font-weight: bold;
-      font-size: 9px !important;
+      font-size: 15px !important;
       border: 2px solid #2b13bb;
       border-radius: 5px !important;
       cursor: pointer;
-      position: absolute;
-      top: 67.55vh;
-      left: 782px !important;
+      position:fixed !important;
+      top: 90.600%;
+      left: 52.400% !important;
       height: 37px !important;
       width: 37px !important;
       transition: background-color 0.1s;
     }
-    .draw_feature {
-      top: 79.50vh;
-      left: 703px !important;
-      position: absolute;
-      height: 37px;
-      width: 37px;
+    #editFeatureButton {
       border: 2px solid #2b13bb;
       border-radius: 5px 5px 5px 5px;
+      height: 37px !important;
+      width: 37px !important;
+      display: none;
+      position: fixed !important;
+      top: 92%;
+      left: 55.600%;
+      padding: 3px 5px !important;
+      background: white;
+      font-size: 15px;
+      border-bottom: 2px solid #2b13bb;
+    }
+    #saveDataButton {
+      border: 2px solid #2b13bb;
+      border-bottom: 2px solid #2b13bb;
+      border-top: 2px solid #2b13bb;
+      border-radius: 5px 5px 5px 5px;
+      background-color: white;
+      position: fixed !important;
+      color: black;
+      padding: 5px 5px;
+      display: none;
+      padding: 7px !important;
+      top:92%;
+      font-size: 15px !important;
+      height: 37px;
+      width: 37px;
+      left: 58.10% !important;
+    }
+    #deleteFeatureButton {
+      border: 2px solid #2b13bb;
+      border-top: 2px solid #2b13bb;
+      border-radius: 5px 5px 5px 5px;
+      background-color: white;
+      color: black;
+      padding: 6px 7.3px ;
+      display: none;
+      position: fixed;
+      top:92%;
+      font-size: 14px;
+      height: 37px;
+      width: 37px;
+      left: 60.65%;
+  
     }
     .leaflet-draw-draw-polyline {
-      top: 61vh;
-      padding: 5px;
-      left: 663px !important;
+      top: 92%;
+      position: fixed!important;
+      left: 43% !important;
       border: 2px solid #2b13bb !important;
       border-bottom: 2px solid darkblue;
       height: 37px !important;
       width: 37px !important;
       /* display: none !important; */
+      border-radius: 5px 5px 5px 5px !important;
+    }
+    .leaflet-draw-draw-polygon {
+      left: 40.400% !important;
+      position:fixed!important;
+      top: 92%!important;
+      height: 37px !important;
+      width: 37px !important;
+      border-bottom: 2px solid #2b13bb !important;
+      border-top: 2px solid #2b13bb !important;
+      border-left: 2px solid #2b13bb !important;
+      border-right: 2px solid #2b13bb !important;
+      border-radius: 5px 5px 5px 5px !important;
+    }
+    .leaflet-draw-draw-circle {
+      position: fixed;
+      top: 92%;
+      left: 45.50%;
+      border-bottom: 2px solid #2b13bb !important;
+      border-top: 2px solid #2b13bb !important;
+      border-left: 2px solid #2b13bb !important;
+      border-right: 2px solid #2b13bb !important;
+      border-top: none;
+      width: 37px !important;
+      height: 37px !important;
       border-radius: 5px 5px 5px 5px !important;
     }
     #save-button {
@@ -276,15 +339,15 @@
       background-color: white;
       color: black;
       padding: 7px;
-      /* display: none; */
-      position: absolute;
+      display: none;
+      position: fixed;
       border: 2px solid #2b13bb;
       border-top: 2px solid #2b13bb;
       border-bottom: 2px solid #2b13bb;
-      top: 76.300vh !important;
+      top: 92%;
       height: 37px;
       width: 37px;
-      left: 503px;
+      left: 35.40%;
       font-size: 15px;
       border-bottom: 2px solid #2b13bb;
     }
@@ -297,9 +360,9 @@
       background-color: white;
       color: black;
       cursor: pointer;
-      left: 461px;
-      position: absolute;
-      top: 68.900vh;
+      left: 32.800%;
+      position:fixed;
+      top: 92%;
       height: 37px;
       width: 37px;
       display: none;
@@ -308,16 +371,18 @@
       border-left: 2px solid #2b13bb !important;
       border-right: 2px solid #2b13bb !important;
     }
+    
     .leaflet-control-edit-interior {
-      font-size: 15px;
-      position: absolute !important;
+      font-size: 15px !important;
+      position: fixed!important;
       height: 37px !important;
       width: 37px !important;
-      top: 70.800vh !important;
+      top: 92%!important;
+      padding: 2px !important;
       border: 2px solid #2b13bb;
       border-radius: 5px 5px 5px 5px !important;
-      display: none;
-      left: 541px !important;
+      /* display: none; */
+      left: 37.90% !important;
       border-bottom: 2px solid #2b13bb !important;
     }
     .leaflet-draw-actions {
@@ -326,80 +391,18 @@
       margin: 0;
       padding: 0;
       position: fixed !important;
-      left: 590px !important;
-      top: 86vh !important;
+      left: 40% !important;
+      top: 86%!important;
       white-space: nowrap;
     }
+}
+
   
-    #editFeatureButton {
-      border: 2px solid #2b13bb;
-      border-radius: 5px 5px 5px 5px;
-      height: 37px !important;
-      width: 37px !important;
-      /* display: none; */
-      position: fixed;
-      top: 90.790vh;
-      left: 54.410%;
-      padding: 3px 5px !important;
-      background: white;
-      border-bottom: 2px solid #2b13bb;
-    }
-    #saveDataButton {
-      border: 2px solid #2b13bb;
-      border-bottom: 2px solid #2b13bb;
-      border-top: 2px solid #2b13bb;
-      border-radius: 5px 5px 5px 5px;
-      background-color: white;
-      position: fixed;
-      color: black;
-      padding: 5px 5px;
-      /* display: none !important; */
-      top: 90.700vh;
-      font-size: 19px;
-      height: 37px;
-      width: 37px;
-      left: 870px;
-    }
-    #deleteFeatureButton {
-      border: 2px solid #2b13bb;
-      border-top: 2px solid #2b13bb;
-      border-radius: 5px 5px 5px 5px;
-      background-color: white;
-      color: black;
-      padding: 3px 7px;
-      /* display: none; */
-      position: fixed;
-      top: 90.790vh;
-      font-size: 15px;
-      height: 37px;
-      width: 37px;
-      left: 910px;
-    }
-    .leaflet-draw-draw-polygon{
-      left: 620px !important;
-      position: relative !important;
-      top: 60.800vh !important;
-      height: 37px !important;
-      width: 37px !important;
-      border-bottom: 2px solid #2b13bb !important;
-      border-top: 2px solid #2b13bb !important;
-      border-left: 2px solid #2b13bb !important;
-      border-right: 2px solid #2b13bb !important;
-      border-radius: 5px 5px 5px 5px !important;
-    }
-    .leaflet-draw-draw-circle {
-      position: absolute;
-      top: 453px;
-      left: 582px;
-      border-bottom: 2px solid #2b13bb !important;
-      border-top: 2px solid #2b13bb !important;
-      border-left: 2px solid #2b13bb !important;
-      border-right: 2px solid #2b13bb !important;
-      border-top: none;
-      padding: 5px !important;
-        width: 37px !important;
-      height: 37px !important;
-      border-radius: 5px 5px 5px 5px !important;
-    }
-  }
-  
+
+
+
+
+
+
+
+
