--- a/css/road.css
+++ b/css/road.css
@@ -137,7 +137,7 @@
     }
     .delete-button {
       border: 2px solid #2b13bb;
-      padding: 6px 7.3px;
+      padding: 7px 7px;
       font-size: 14px;
       border-radius: 5px 5px 5px 5px;
       display: block;
@@ -155,18 +155,7 @@
       border-left: 2px solid #2b13bb !important;
       border-right: 2px solid #2b13bb !important;
     }
-    .leaflet-control-edit-interior {
-      font-size: 15px;
-      position:fixed !important;
-      height: 37px !important;
-      width: 37px !important;
-      top:91%!important;
-      border: 2px solid #2b13bb;
-      border-radius: 5px 5px 5px 5px !important;
-      display: none;
-      left:46.50%!important;
-      border-bottom: 2px solid #2b13bb !important;
-    }
+    
     #save-button {
       /* border: 2px solid rgb(187, 187, 187); */
       border-radius: 5px 5px 5px 5px;
@@ -196,6 +185,7 @@
       border-radius: 5px 5px 5px 5px !important;
       display: none;
       left: 46.30%!important;
+      padding: 3px 2px !important;
       border-bottom: 2px solid #2b13bb !important;
     }
     .leaflet-draw-actions {
@@ -221,11 +211,11 @@
     color: black;
     cursor: pointer;
     left: 38.800%;
-    position:fixed;
+    position:fixed !important;
     top: 91%;
     height: 37px;
     width: 37px;
-    /* display: none; */
+    display: none;
     border-top: 2px solid #2b13bb !important;
     border-bottom: 2px solid #2b13bb !important;
     border-left: 2px solid #2b13bb !important;
@@ -299,7 +289,7 @@
       
     }
     .custom-button {
-      padding: 6px 3px !important;
+      padding: 8px 3px !important;
       background-color: #fff;
       font-weight: bold;
       font-size: 9px !important;
@@ -357,5 +347,15 @@
       height: 37px;
       width: 37px;
       left: 59.300%;
+    }
+    .leaflet-draw-actions {
+      display: none;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      position: fixed !important;
+      left: 43%!important;
+      top: 86% !important;
+      white-space: nowrap;
     }
 }
