--- a/css/style.css
+++ b/css/style.css
@@ -294,20 +294,17 @@ border: 2px solid darkblue;
 }
 
 .leaflet-popup-content {
-  margin: 13px 24px 13px 20px;
+  margin: 13px 24px 13px 8px;
   line-height: 1.3;
   font-size: 10px;
   font-size: 1.08333em;
   min-height: 1px;
   width: 240px;
   height: 200px;
-  overflow: scroll;
+  overflow-y: auto;
+  overflow-x: hidden;
   scrollbar-width: thin;
 }
-
-/* .leaflet-popup-content strong{
-padding: 5px;
-  } */
 tbody,
 td,
 tfoot,
@@ -322,9 +319,31 @@ tr {
 .popup-table tr,
 td {
   border-bottom: 1px solid;
-  /* padding: 5px; */
+  padding: 5px;
+}
+.leaflet-popup-content-wrapper {
+  padding: 1px;
+  text-align: left;
+  border-radius: 12px;
+  width: 264px;
+}
+.leaflet-container a.leaflet-popup-close-button {
+  position: absolute;
+  top: -3px !important;
+  right: -2px !important;
+  border: none;
+  text-align: center;
+  width: 24px;
+  height: 24px;
+  font: 16px / 24px Tahoma, Verdana, sans-serif;
+  color: red !important;
+  text-decoration: none;
+  background: transparent;
 }
 
+.popup-table tr td:not(:last-child) {
+  border-right: 1px solid;
+}
 /* save popup */
 
 .my-custom-popup {
@@ -377,3 +396,4 @@ td {
 .leaflet-touch .geocoder-control-input:focus {
   width: 300px;
 }
+
