--- a/css/style.css
+++ b/css/style.css
@@ -501,11 +501,10 @@ td {
   border-bottom: 2px solid #2b13bb !important;
 }
 
-.leaflet-popup-content-wrapper{
+/* .leaflet-popup-content-wrapper{
   height: auto;
-  /* max-height: 200px; */
 
-}
+} */
 
 
 .leaflet-touch .geocoder-control-input {
@@ -537,6 +536,58 @@ width: 37px;
   white-space: nowrap;
 }
 
+.leaflet-container a.leaflet-popup-close-button {
+  position: absolute;
+  right: 0;
+  left: 90% !important;
+  border: none;
+  text-align: center;
+  width: 24px;
+  height: 24px;
+  font: 16px / 24px Tahoma, Verdana, sans-serif;
+  color: red !important;
+  text-decoration: none;
+  background: transparent;
+}
+.leaflet-popup-tip {
+  width: 17px !important;
+  height: 17px !important;
+  padding: 1px;
+  margin: -10px auto 0;
+  pointer-events: auto;
+  /* -webkit-transform: rotate(45deg); 
+  -moz-transform: rotate(45deg) ;
+  -ms-transform: rotate(45deg);
+   transform: rotate(45deg);  */
+}
+.leaflet-popup-content-wrapper {
+  padding: 1px;
+  text-align: left;
+  border-radius: 0px !important;
+}
+.leaflet-popup-content-wrapper, .leafletpopup-tip {
+  background: #00000080 !important;
+  color: white !important;
+  border-radius: 4px !important;
+  box-shadow: 0 3px 14px rgba(0, 0, 0, 0.4) !important;
+}
+.leaflet-popup-content-wrapper, .leaflet-popup-tip {
+  /* background: rgba(0, 0, 0, 0.5) !important; */
+  /* color: #fff !important; */
+  /* box-shadow: 0 3px 14px rgba(0, 0, 0, 0.4) !important; */
+  width: 20vh !important;
+  /* transform: translate3d(1378px, 611px, 0px) !important; */
 
-
-
+}
+.leaflet-popup-content {
+  margin: 10px 23px 12px 20px;
+  line-height: 1.3;
+  font-size: 10px;
+  font-size: 1.08333em;
+  /* min-height: 1px; */
+  /* width: 240px; */
+  /* height: auto; */
+  /* max-height: 200px; */
+  /* overflow: scroll; */
+  /* scrollbar-width: thin; */
+}
